# roc-robot-sdk

./: .editorconfig  .gitattributes  .gitignore  ADAPTER-CONTRACT.md  GITHUB-PUBLISH.md  README-TPM-LINUX.md  README-TPM-LINUX.txt  README.md  README.txt  go2_bridge.py  install.sh  roc-robot-tpm-sdk.sh  roc_adapter_runtime.py
.github/workflows/: ci.yml
adapters/go2/: adapter.json  go2_bridge.py  install.sh  runtime_adapter.py
adapters/go2/go2_helper/: CMakeLists.txt  go2_action_helper.cpp  go2_camera_probe.cpp  go2_lidar_navigator.cpp  go2_local_planner.cpp  go2_local_planner.hpp  go2_local_planner_test.cpp
adapters/mock-wheel/: adapter.json  adapter.py
examples/: mock-delivery-job.json
go2_helper/: CMakeLists.txt  go2_action_helper.cpp
schemas/: adapter-manifest.schema.json  job-event.schema.json  job.schema.json
tests/: __init__.py  test-adapter-runtime.sh  test-adapter-selection.sh  test-core-install.sh  test_adapter_runtime.py  test_source_quality.py
